--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,10 @@
       },
       "modules": false
     }]
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]      
+    }
+  }
 }
