--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.2.2",
+    "jest-canvas-mock": "^2.2.0",
     "raw-loader": "^3.1.0",
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0",
