--- a/package.json
+++ b/package.json
@@ -52,5 +52,12 @@
   "dependencies": {
     "phaser": "^3.20.1",
     "phaser3-rex-plugins": "^1.1.21"
+  },
+  "jest": {
+    "setupFiles": ["jest-canvas-mock"],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
